@@ -1,0 +1,5 @@
+Tabs include file test
+----------------------
+
+The next line has a tab:
+-|	|-
